--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "script/test --browsers Firefox --single-run"
+    "test": "script/test --browsers Firefox --single-run",
+    "start": "scripts/dev-examples"
   },
   "authors": [
     "Jason Madsen"
@@ -24,6 +25,7 @@
     "browserify-shim": "3.6.0",
     "envify": "1.2.0",
     "expect": "0.1.1",
+    "jsx-loader": "0.11.2",
     "karma": "0.12.16",
     "karma-browserify": "^0.2.1",
     "karma-chrome-launcher": "0.1.4",
@@ -35,7 +37,7 @@
     "reactify": "^0.14.0",
     "rf-release": "0.3.1",
     "uglify-js": "2.4.15",
-    "fsmonitor": "^0.2.4"
+    "webpack-dev-server": "1.6.5"
   },
   "peerDependencies": {
     "react": ">=0.11.0"
