[fixed] Use Reactify transform when building
Without this, apps depending on react-menu and building with Browserify
throw a syntax error on the JSX. See andreypopp/reactify#20

--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
   "browserify-shim": {
     "react": "global:React"
   },
+  "browserify": {
+    "transform": [
+      "reactify"
+    ]
+  },
   "dependencies": {
     "js-stylesheet": "0.0.1"
   }
