--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "scripts/test --browsers Firefox --single-run",
+    "test": "scripts/test --browsers Chrome --single-run",
     "start": "scripts/dev-examples"
   },
   "authors": [
