--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "./lib/index",
   "repository": {
     "type": "git",
-    "url": "https://github.com/knomedia/react-menu.git"
+    "url": "https://github.com/instructure-react/react-menu.git"
   },
-  "homepage": "https://github.com/knomedia/react-menu",
-  "bugs": "https://github.com/knomedia/react-menu/issues",
+  "homepage": "https://github.com/instructure-react/react-menu",
+  "bugs": "https://github.com/instructure-react/react-menu/issues",
   "directories": {
     "example": "examples"
   },
