--- a/scripts/build
+++ b/scripts/build
@@ -1,10 +1,25 @@
-#!/bin/sh
-mkdir -p dist
+#!/bin/sh -e
+
+rm -rf dist
+mkdir -p dist/{umd,lib}
+
 NODE_ENV=production node_modules/.bin/browserify lib/index.js \
   -t reactify \
   -t browserify-shim \
   -t envify \
   --detect-globals false \
-  -s ReactMenu > dist/react-menu.js
-node_modules/.bin/uglifyjs dist/react-menu.js \
-  --compress warnings=false > dist/react-menu.min.js
+  -s ReactMenu > dist/umd/react-menu.js
+node_modules/.bin/uglifyjs dist/umd/react-menu.js \
+  --compress warnings=false > dist/umd/react-menu.min.js
+
+JSX=node_modules/jsx-loader/node_modules/react-tools/bin/jsx
+
+node -p 'p=require("./package");p.main="dist/lib/index.js";p.scripts=p.devDependencies=undefined;JSON.stringify(p,null,2)' > dist/package.json
+
+for FILE in $(find lib -name '*.js'); do
+  DIRNAME=$(dirname ${FILE})
+  mkdir -p dist/${DIRNAME}
+  DESTNAME=dist/${FILE}
+
+  ${JSX} --harmony ${FILE} > ${DESTNAME}
+done
