--- a/package.json
+++ b/package.json
@@ -21,26 +21,28 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "browserify": "4.2.3",
-    "browserify-shim": "3.6.0",
-    "envify": "1.2.0",
-    "expect": "0.1.1",
-    "jsx-loader": "0.11.2",
-    "karma": "0.12.16",
-    "karma-browserify": "^0.2.1",
-    "karma-chrome-launcher": "0.1.4",
-    "karma-cli": "0.0.4",
-    "karma-firefox-launcher": "0.1.3",
-    "karma-mocha": "0.1.3",
-    "mocha": "1.20.1",
-    "react": "^0.13.0",
-    "reactify": "^0.14.0",
-    "rf-release": "0.3.1",
-    "uglify-js": "2.4.15",
-    "webpack-dev-server": "1.6.5"
+    "browserify": "13.0.0",
+    "browserify-shim": "3.8.12",
+    "envify": "3.4.0",
+    "expect": "1.14.0",
+    "jsx-loader": "0.13.2",
+    "karma": "0.13.19",
+    "karma-browserify": "^5.0.1",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-cli": "0.1.2",
+    "karma-firefox-launcher": "0.1.7",
+    "karma-mocha": "0.2.1",
+    "mocha": "2.4.5",
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "reactify": "^1.1.1",
+    "rf-release": "0.4.0",
+    "uglify-js": "2.6.1",
+    "webpack-dev-server": "1.14.1"
   },
   "peerDependencies": {
-    "react": "^0.13.0"
+    "react": "^0.14.7"
   },
   "tags": [
     "react",
