Prevent window from scrolling when navigating menu
refs https://github.com/instructure-react/react-menu/issues/32

This stops the entire page from moving when the user is just trying
to navigate the menu options using arrow keys.

Also updates the included basic example for react-menu.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "reactify": "^1.1.1",
     "rf-release": "0.4.0",
     "uglify-js": "2.6.1",
-    "webpack-dev-server": "1.14.1"
+    "webpack-dev-server": "1.14.1",
+    "webpack": "1.13.1"
   },
   "peerDependencies": {
     "react": "^0.14.7"
