--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "browserify": "13.0.0",
-    "browserify-shim": "3.8.12",
+    "babel-core": "6.13.2",
+    "babel-loader": "6.2.4",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
+    "babel-preset-es2015": "6.13.2",
+    "babel-preset-react": "6.11.1",
     "envify": "3.4.0",
     "expect": "1.14.0",
     "jsx-loader": "0.13.2",
@@ -37,7 +40,6 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
-    "reactify": "^1.1.1",
     "rf-release": "0.4.0",
     "uglify-js": "2.6.1",
     "webpack": "1.13.1",
@@ -57,14 +59,6 @@
     "menu",
     "dropdown"
   ],
-  "browserify-shim": {
-    "react": "global:React"
-  },
-  "browserify": {
-    "transform": [
-      "reactify"
-    ]
-  },
   "dependencies": {
     "js-stylesheet": "0.0.1"
   }
