--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "webpack-dev-server": "1.14.1"
   },
   "peerDependencies": {
-    "react": "^15.3.2"
+    "react": "^0.14.0 || ^15.0.0-0"
   },
   "tags": [
     "react",
